@@ -32,6 +32,7 @@ report Julian G)
 add it when I promised you I would, lol]
 [+] Fixed Bad Time Simulator (Thanks for the bug report Omega, next
 time use the bug report form though)
+[+] Added Unmonitored Google Gemini
 
 09/18/2025:
 [+] Fixed Tomb of the Mask (Thanks for the bug report Buena)
